project/stage/tests/reject/bad_array_ref.ul
void main(){
  int[10] things;
  int thing;

  things[5] = 1;
 
  thing = things[true];

  print things[5];
}